      stream if the server is version 1.13 or greater, reducing roundtrips
      significantly. (Andrew Bennetts, Robert Collins)

    * Lightweight Checkouts and Stacked Branches should both be much
      faster over remote connections. Building the working tree now
      batches up requests into approx 5MB requests, rather than a separate
      request for each file. (John Arbash Meinel)

    * Support for GSSAPI authentication when using HTTP or HTTPS. 
      (Jelmer Vernooij)

    * The ``bzr shelve`` prompt now includes a '?' help option to explain the
      short options better. (Daniel Watkins, #327429)

    * ``bzr lp-open`` now falls back to the push location if it cannot find a
      public location. (Jonathan Lange, #332372)

    * ``bzr lp-open`` will try to find the Launchpad URL for the location
      passed on the command line. This makes ``bzr lp-open lp:foo`` work as
      expected. (Jonathan Lange, #332705)

    * ``bzr send`` now supports MH-E via ``emacsclient``. (Eric Gillespie)

  BUG FIXES:

    * ``bzr missing`` now uses ``Repository.get_revision_delta()`` rather
      than fetching trees and determining a delta itself. (Jelmer
      Vernooij, #315048)

    * ``bzr push`` to a smart server no longer causes "Revision
      {set([('null:',)])} not present ..." errors when the branch has
      multiple root revisions. (Andrew Bennetts, #317654)

    * ``bzr shelve`` now properly handle patches with no terminating newline.
      (Benoît PIERRE, #303569)

    * ``bzr unshelve`` gives a more palatable error if passed a non-integer
      shelf id. (Daniel Watkins)

    * Export now handles files that are not present in the tree.
      (James Westby, #174539)

    * Fixed "sprout() got an unexpected keyword argument 'source_branch'"
      error branching from old repositories.
      (Martin Pool, #321695)

    * Many Branch hooks would not fire with ``bzr://`` and ``bzr+ssh://``
      branches, and this was not noticed due to a bug in the test logic