@@ -68,6 +68,10 @@ IN DEVELOPMENT
       batches up requests into approx 5MB requests, rather than a separate
       request for each file. (John Arbash Meinel)
 
+    * A new format name alias ``default-rich-root`` has been added and
+      points at the closest relative of the default format that supports 
+      rich roots. (Jelmer Vernooij, #338061)
+
     * Support for GSSAPI authentication when using HTTP or HTTPS. 
       (Jelmer Vernooij)
 
